--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="web-app rt001/rw031 CCR">
   <link rel="stylesheet" href="./src/assets/styles/styles.css">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
